--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <header>
     <h1>Anime+</h1>
     <nav>
-      <form>
+      <form id="anime-search-form">
         <input id="search-shows" type="text">
-        <button id="search-button"></button>
+        <button id="search-button">search</button>
       </form>
     </nav>
     <section id="bg-image"></section>
@@ -23,9 +23,7 @@
   <section id="currently-airing">
     <!-- <h2>Currently Airing</h2> -->
   </section>
-  <section id="search-results">
-    <h2>Search Results</h2>
-  </section>
+  <section id="search-results"></section>
   <footer></footer>
 </body>
 </html>
