styles search results section

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         <button id="search-button">search</button>
       </form>
     </nav>
-    <section id="bg-image"></section>
   </header>
+  <section id="bg-image"></section>
   <section id="currently-airing">
     <!-- <h2>Currently Airing</h2> -->
   </section>
   <section id="search-results"></section>
+  <section id="search-images"></section>
   <footer></footer>
 </body>
 </html>
