working on header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
       </form>
     </nav>
   </header>
-  <section id="bg-image"></section>
+  <section id="bg-image-title">
+    <section id="bg-image"></section>
+  </section>
+  
+  
   <section id="currently-airing">
     <!-- <h2>Currently Airing</h2> -->
   </section>
