updated main image on site

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
       </form>
     </nav>
   </header>
-  <section id="bg-image-title">
-    <section id="bg-image"></section>
-  </section>
-
-
+  <div id="main-container">
+    <div id="main-border">
+      <div id="main-text"></div>
+      <div id="main-image"></div>
+    </div>
+  </div>
   <section id="currently-airing">
     <!-- <h2>Currently Airing</h2> -->
   </section>
