editing search results layout

--- a/index.html
+++ b/index.html
@@ -27,11 +27,16 @@
       <div id="main-image"></div>
     </div>
   </div>
-  <section id="currently-airing">
+  <div id="currently-airing">
     <!-- <h2>Currently Airing</h2> -->
-  </section>
-  <section id="search-results"></section>
-  <section id="search-images"></section>
+  </div>
+  <div id="search-section"></div>
+  <div id="search-images">
+    <div id="search-titles">      
+    </div>
+  </div>
+  
+  
   <footer></footer>
 </body>
 
