added titles to form

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     <!-- <h2>Currently Airing</h2> -->
   </div>
   <div id="search-section"></div>
-  <div id="search-images">
-    <div id="search-titles">      
+<div id="search-images"></div>     
     </div>
   </div>
   
