stying the search results

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
   <div id="currently-airing">
     <!-- <h2>Currently Airing</h2> -->
   </div>
-  <div id="search-section"></div>
-<div id="search-images"></div>     
-    </div>
+  <div id="search-header"></div>
+  <div id="image-container">
+    <div id="search-images"></div>
   </div>
   
+  <!-- <div id="search-titles"></div> -->
   
   <footer></footer>
 </body>
