--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
 </head>
 
 <body>
-  <header>
-    <h1>Anime+</h1>
-    <nav>
-      <form id="anime-search-form">
-        <input id="search-shows" type="text">
-        <button id="search-button">search</button>
-      </form>
-    </nav>
-  </header>
-  <div id="main-container">
-    <div id="main-border">
-      <div id="main-text"></div>
-      <div id="main-image"></div>
+    <header>
+      <h1>Anime+</h1>
+      <nav>
+        <form id="anime-search-form">
+          <input id="search-shows" type="text">
+          <button id="search-button">search</button>
+        </form>
+      </nav>
+    </header>
+    <div id="main-container">
+      <div id="main-border">
+        <div id="main-text"></div>
+        <div id="main-image"></div>
+      </div>
     </div>
-  </div>
-  <div id="currently-airing">
-    <!-- <h2>Currently Airing</h2> -->
-  </div>
-  <div id="search-header"></div>
-  <div id="image-container">
+  
+    <div id="currently-airing">
+      <!-- <h2>Currently Airing</h2> -->
+    </div>
+    <div id="search-header"></div>
+    <div id="image-container">
     <div id="search-images"></div>
-  </div>
+    </div>
   
-  <!-- <div id="search-titles"></div> -->
-  
-  <footer></footer>
+    <!-- <div id="search-titles"></div> -->
+    <footer>Data from <a href="https://jikan.moe/">Jikan</a></footer>
 </body>
 
 </html>
