added currently airing anime section

--- a/index.html
+++ b/index.html
@@ -27,16 +27,14 @@
         <div id="main-image"></div>
       </div>
     </div>
-  
+    <div id="current-header"></div>
     <div id="currently-airing">
-      <!-- <h2>Currently Airing</h2> -->
+      <div id="current-images"></div>
     </div>
     <div id="search-header"></div>
     <div id="image-container">
-    <div id="search-images"></div>
+      <div id="search-images"></div>
     </div>
-  
-    <!-- <div id="search-titles"></div> -->
     <footer>Data from <a href="https://jikan.moe/">Jikan</a></footer>
 </body>
 
