--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
     <div id="currently-airing">
       <div id="current-images"></div>
     </div>
+
+    <div id="action-header"></div>
+    <div id="action-genre">
+      <div id="action-images"></div>
+    </div>
+
+    <div id="fantasy-header"></div>
+    <div id="fantasy-genre">
+      <div id="fantasy-images"></div>
+    </div>
+
+    <div id="romance-header"></div>
+    <div id="romance-genre">
+      <div id="romance-images"></div>
+    </div>
+
     <div id="search-header"></div>
     <div id="image-container">
       <div id="search-images"></div>
