added upcoming anime section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
       <div id="current-images"></div>
     </div>
 
+    <div id="upcoming-header"></div>
+    <div id="upcoming-genre">
+      <div id="upcoming-images"></div>
+    </div>
+
     <div id="action-header"></div>
     <div id="action-genre">
       <div id="action-images"></div>
