styling and scrolling effects

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div id="image-container">
       <div id="search-images"></div>
     </div>
-    <footer>Data from <a href="https://jikan.moe/">Jikan</a></footer>
+    <footer id="footer">Data from <a href="https://jikan.moe/">Jikan</a></footer>
 </body>
 
 </html>
