--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
     <div id="image-container">
       <div id="search-images"></div>
     </div>
+    <div id="back-up-div">
+      <button id="back-up">^</button>
+    </div>
     <footer id="footer">Data from <a href="https://jikan.moe/">Jikan</a></footer>
 </body>
 
