--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav>
         <form id="anime-search-form">
           <input id="search-shows" type="text">
-          <button id="search-button">search</button>
+          <button id="search-button">Search</button>
         </form>
       </nav>
     </header>
