--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div id="search-images"></div>
     </div>
     <div id="back-up-div">
-      <button id="back-up">^</button>
+      <button id="back-up">🔝</button>
     </div>
     <footer id="footer">Data from <a href="https://jikan.moe/">Jikan</a></footer>
 </body>
