--- a/index.html
+++ b/index.html
@@ -56,10 +56,13 @@
     <div id="image-container">
       <div id="search-images"></div>
     </div>
-    <div id="back-up-div">
-      <button id="back-up">🔝</button>
-    </div>
-    <footer id="footer">Data from <a href="https://jikan.moe/">Jikan</a></footer>
+    
+    <footer id="footer">
+      <div id="back-up-div">
+        <button id="back-up">🔝</button>
+      </div>
+      Data from <a href="https://jikan.moe/">Jikan</a>
+    </footer>
 </body>
 
 </html>
