--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         </form>
       </nav>
     </header>
+        <span class="close">x</span>
+      </div>
+    </div>
     <div id="main-container">
       <div id="main-border">
         <div id="main-text"></div>
@@ -67,3 +70,4 @@
 </body>
 
 </html>
+
