--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
       <div id="upcoming-images"></div>
     </div>
 
+    <div id="banner-container">
+      <div id="banner-border">
+        <div id="banner-text"></div>
+        <div id="banner-image"></div>
+      </div>
+    </div>
+
     <div id="action-header"></div>
     <div id="action-genre">
       <div id="action-images"></div>
