added social icons

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
         <button id="back-up">🔝</button>
       </div>
       Data from <a href="https://jikan.moe/">Jikan</a>
+      <a href="https://www.linkedin.com/in/ashley-sands-b64827121/"><img id="linkedin" src="https://i.imgur.com/oxGZLGA.png" alt="linkedin logo"></a>
+      <a href="https://github.com/asands94/AnimePlus"><img id="github" src="https://i.imgur.com/BbYTbcQ.png" alt="github logo"></a>
     </footer>
 </body>
 
