--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     
     <footer id="footer">
       <div id="back-up-div">
-        <button id="back-up">🔝</button>
+        <button id="back-up">Top</button>
       </div>
       Data from <a href="https://jikan.moe/">Jikan</a>
       <a href="https://www.linkedin.com/in/ashley-sands-b64827121/"><img id="linkedin" src="https://i.imgur.com/oxGZLGA.png" alt="linkedin logo"></a>
