addd meta tags for fb and twitter

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <script src="https://kit.fontawesome.com/654bcebdd2.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script defer src="./app.js"></script>
+  <meta property="og:title" content="Anime Search Database">
+  <meta property="og:description" content="Search for various anime and read a brief synopsis.">
+  <meta property="og:image" content="https://i.imgur.com/xJbF9SD.png">
+  <meta property="og:url" content="https://asands94.github.io/AnimePlus/">
+  <meta name="twitter:card" content="summary_large_image">
   <title>Anime+</title>
 </head>
 
