--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <button id="back-up">Top</button>
       </div>
       Data from <a href="https://jikan.moe/">Jikan</a>
-      © 2021 Ashley Sands
+      © 2021-2023 Ashley Sands
       <a href="https://www.linkedin.com/in/ashley-sands-b64827121/"><img id="linkedin" src="https://i.imgur.com/oxGZLGA.png" alt="linkedin logo"></a>
       <a href="https://github.com/asands94/AnimePlus"><img id="github" src="https://i.imgur.com/BbYTbcQ.png" alt="github logo"></a>
     </footer>
